--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,9 +1,10 @@
 <center>
-<h1>A shitload a lnks</h1>
+<h1>Links that are awesomer than anything you've ever seen on HN</h1>
 
 <% @links.each do |link| %>
-
+<%= debug link%>
 <%= link_to link.url, link.url %>
+
 <br>
 
 <% end %>
