standardized url input

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,8 @@
 <center>
-<h1>Links that are awesomer than anything you've ever seen on HN</h1>
+<h1>Some totally awesome shit:
+  </h1>
 
 <% @links.each do |link| %>
-<%= debug link%>
 <%= link_to link.url, link.url %>
 
 <br>
