twitter bootstrap for sexy styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,8 @@
 /*
+ *= require bootstrap_and_overrides
+ */
+
+/*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -11,3 +15,5 @@
  *= require_self
  *= require_tree .
  */
+
+
