--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,6 +2,8 @@
 <h1>Some totally awesome shit:
   </h1>
 
+# render 'layouts/header'
+
 <% @links.each do |link| %>
 <%= link_to link.url, link.url %>
 
