day 3 work: views, controllers, just about everything else

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,9 @@
-<center>
-<h1>Some totally awesome shit:
-  </h1>
+<%= render :partial => 'common/header', :locals => {:user => current_user}%>
 
-# render 'layouts/header'
+<center>
+<h1>Some totally awesome links:
+  </h1>
+<br><br>
 
 <% @links.each do |link| %>
 <%= link_to link.url, link.url %>
