--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,15 @@
-<h2>Sign up before all the cookies are gone:</h2>
-<%= form_for(@user) do |f| %>
-    <%= f.label :name %>
-<br><%= f.text_field :name %>
-<br><%= f.label :email %>
-<br><%= f.text_field :email %>
-<br><%= f.label :password %>
-<br><%= f.text_field :password %>
-<br><%= f.label :password_confirmation %>
-<br><%= f.text_field :password_confirmation %>
-<br><%= f.submit 'Create account!'%>
+<%= render :partial => 'signup'%>
+<center>
+  <ul>
+    <li><%= form_for(@user) do |f| %></li>
+    <li><%= f.label :name %></li>
+    <li><%= f.text_field :name %></li>
+    <li><%= f.label :email %></li>
+    <li><%= f.text_field :email %></li>
+    <li><%= f.label :password %></li>
+    <li><%= f.text_field :password %></li>
+    <li><%= f.label :password_confirmation %></li>
+    <li><%= f.text_field :password_confirmation %></li>
+  </ul>
+<br><%= f.submit 'Create account!'%></center>
 <%end%>
