add functionality to allow users to edit their links

--- a/app/views/links/_header.html.erb
+++ b/app/views/links/_header.html.erb
@@ -2,6 +2,7 @@
     <div class="navbar-inner">
       <div class="container">
         <a class="brand" href="/links/new">Submit</a>
+        <a class="brand" href="/links">Home</a>
       </div>
     </div>
   </div>
