setting up for deployment

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => 'common/header', :locals => {:user => current_user}%>
 
 <center>
-<h1>Some totally awesome links:
+<h1>Here's the list of some totally awesome links:
   </h1>
 <br><br>
 <br><br>
